packages/taquito-michel-codec/test/contracts_015/ill_typed/ticket_in_ticket.tz
# This script attempts to duplicate a ticket by storing it
# in another ticket and calling READ_TICKET twice on it.
# It should fail at parsing because ticket contents must be
# comparable so (ticket (ticket unit)) cannot be built.
parameter (ticket unit);
storage (option (pair (ticket unit) (ticket unit)));
code {
       CAR;
       PUSH nat 0;
       SWAP;
       TICKET;
       ASSERT_SOME;
       READ_TICKET; CDR; CAR;
       SWAP; READ_TICKET; CDR; CAR;
       SWAP; DROP;
       PAIR; SOME; NIL operation; PAIR
     }